# erno

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  TODO.md  clippy.toml
.claude/: settings.json
.github/workflows/: ci.yml
api/: AGENTS.md  Cargo.toml
api/config/: development.toml  test.toml
api/examples/: simple_api.rs
api/src/: api.rs  boot.rs  cli.rs  commands.rs  config.rs  database.rs  emails.rs  environment.rs  job_queue.rs  jobs.rs  lib.rs  mailer.rs  password.rs  router.rs  setup_tracing.rs  websocket.rs
app/: .gitignore  AGENTS.md  README.md  angular.json  package-lock.json  package.json  tsconfig.json
cli/: AGENTS.md  Cargo.toml  package-lock.json  package.json
cli/src/: global_config.rs  main.rs  ng.rs
cli/src/commands/: deploy.rs  dev.rs  doctor.rs  mod.rs  new.rs  setup.rs
cli/templates/: .gitignore
cli/templates/api/: Cargo.toml
cli/templates/api/config/: development.toml  production.toml  test.toml
cli/templates/api/src/: main.rs
cli/templates/app/: app.component.html  app.module.ts  capacitor.config.ts
cli/templates/app/src/: styles.css
cli/templates/app/src/app/: app-routing-module.ts  app-routing.module.ts
cli/templates/app/src/app/auth/forgot-password/: forgot-password.component.html  forgot-password.component.ts
cli/templates/app/src/app/auth/login/: login.component.html  login.component.ts
cli/templates/app/src/app/auth/register/: register.component.html  register.component.ts
cli/templates/app/src/app/auth/reset-password/: reset-password.component.html  reset-password.component.ts
cli/templates/app/src/app/auth/verify-email/: verify-email.component.html  verify-email.component.ts
cli/templates/app/src/app/home/: home.component.ts  home.page.html  home.page.ts
cli/templates/deploy/api/: Dockerfile
cli/templates/deploy/app/: Dockerfile
cli/templates/deploy/app/docker/: entrypoint.sh
cli/templates/deploy/chart/: Chart.yaml  deploy.toml  secrets.example.yaml  values.yaml
cli/templates/deploy/chart/templates/: _helpers.tpl  api.yaml  api_service.yaml  app.yaml  app_service.yaml  ingress.yaml  letsencrypt_issuer.yaml  registry_secret.yaml
cli/templates/deploy/github/workflows/: build.yaml
cli/test_app/api/: Cargo.toml
cli/test_app/api/config/: development.toml  production.toml  test.toml
cli/test_app/api/src/: main.rs
cli/test_app/api/src/migrations/: mod.rs
cli/test_app/app/: README.md  angular.json  capacitor.config.ts  package-lock.json  package.json
cli/test_app/app/src/: polyfills.ts
cli/test_app/app/src/app/: app-module.ts  app.html  app.spec.ts  app.ts
cli/test_app/app/src/app/auth/: auth.guard.ts
cli/test_app/app/src/app/auth/forgot-password/: forgot-password.component.html  forgot-password.component.ts
cli/test_app/app/src/app/auth/register/: register.component.html
cli/test_app/app/src/app/auth/reset-password/: reset-password.component.html
cli/test_app/app/src/app/home/: home.component.html
config/: development.toml  test.toml
docs/: .gitignore  astro.config.mjs  package-lock.json  package.json
examples/: README.md  simple_api.rs
src/: app.rs  app_info.rs  boot.rs  cli.rs  commands.rs  config.rs  console.rs  emails.rs  job_queue.rs  jobs.rs  lib.rs  mailer.rs  password.rs  router.rs  setup_tracing.rs  tests.rs  token.rs  websocket.rs
src/admin/: mod.rs
src/api/: assertions.rs  json_error.rs  unique_constraint.rs  validated_json.rs
src/auth/: current_user.rs  jwt.rs  mod.rs  prelude.rs  router.rs
src/billing/: mod.rs  router.rs
src/commands/: console.rs  db.rs  db_reset.rs  generate_secret.rs  migrate.rs  routes.rs  serve.rs  version.rs
src/database/: migrations.rs  models.rs
src/jobs/: job_registry.rs  job_supervisor.rs  scheduled_job.rs  send_password_reset_email_job.rs  (+2 more)
(+162 files in other folders)
