[package]
name = "erno"
version = "0.1.0"
edition = "2021"
authors = ["Erno Contributors"]
description = "Shared infrastructure library for building REST APIs with Axum"
license = "MIT"
repository = "https://github.com/yourusername/erno"
homepage = "https://github.com/yourusername/erno"
documentation = "https://docs.rs/erno"
readme = "README.md"
keywords = ["axum", "web", "api", "framework", "jobs"]
categories = ["web-programming", "asynchronous"]
rust-version = "1.88.0"

[features]
default = []
test-utils = ["dep:axum-test", "dep:lets_expect"]

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
axum-macros = "0.5.0"
argon2 = "0.5"
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
config_rs = { package = "config", git = "https://github.com/rust-cli/config-rs.git", tag = "v0.15.13" }
cron = "0.12"
dashmap = "6.1"
fastrand = "2.1"
jsonwebtoken = "9.3"
lettre = { version = "0.11.4", features = ["tokio1", "tokio1-native-tls", "builder", "smtp-transport", "serde"] }
log = "0.4.27"
rand = "0.8"
rhai = { version = "1.21", features = ["sync"] }
rustyline = "14.0"
sea-orm = { version = "1.1.0", features = ["sqlx-postgres", "sqlx-sqlite", "runtime-tokio", "macros", "with-uuid", "with-time"] }
sea-orm-migration = { version = "1.1.14" , features = ["sqlx-postgres", "sqlx-sqlite"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["postgres"] }
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "time", "local-time"] }
uuid = { version = "1.12", features = ["v4", "serde"] }
regex = "1.11.1"
validator = { version = "0.20.0", features = ["derive"] }
time = { version = "0.3.41", features = ["formatting", "local-offset"] }
futures-util = "0.3"
axum-test = { version = "18.5", optional = true }
lets_expect = { version = "0.5.1", optional = true }


[dev-dependencies]
axum-test = "18.5"
