[package]
name = "erno-cli"
version = "0.1.0"
edition = "2021"
description = "CLI tool for the Erno framework"

[[bin]]
name = "erno"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
config_rs = { package = "config", git = "https://github.com/rust-cli/config-rs.git", tag = "v0.15.13" }
dirs = "5"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "signal"] }
tokio-postgres = "0.7"
rand = "0.8"
base64 = "0.22"
serde_json = "1"
