[package]
name = "{{name}}"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "{{name}}"
path = "src/main.rs"

[dependencies]
erno = {{erno_dep}}
sea-orm-migration = { version = "1.1", features = ["sqlx-postgres"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
async-trait = "0.1"
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
